# ATD3.5-S3-EVSE

./: .gitignore  .gitmodules
SquareLine Studio Project/: LED.sll  LED.spj
SquareLine Studio Project/assets/: ui_font_Arial_Rounded_MT_Bold_24.c  ui_font_Arial_Rounded_MT_Bold_24.fcfg  ui_font_Kanit20.c  ui_font_Kanit20.fcfg  ui_font_Kanit40.c  ui_font_Kanit40.fcfg
include/: lv_conf.h
src/: CP_Test.cpp_  GUI_Test.cpp_  PilotController.cpp  PilotController.h  main.cpp  ui.cpp
src/gui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/gui/images/: ui_img_303578728.c  ui_img_505560643.c  ui_img_alert_png.c  ui_img_hatchback_1_png.c  ui_img_settings_png.c
src/gui/screens/: ui_Index.c  ui_Index.h  ui_settings.c  ui_settings.h
